--- a/vratka.html
+++ b/vratka.html
@@ -8,11 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="//fonts.googleapis.com/css?family=Merriweather:300,400,700&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 
-
-<link rel="icon" type="image/png" href="../img/favicon.png">
-<link href="css/base.css" rel="stylesheet" type="text/css">
-<link href="css/style.css" rel="stylesheet" type="text/css">
-<link href="css/navmenu.css" rel="stylesheet" type="text/css">
+  <link rel="icon" type="image/png" href="../img/favicon.png">
+  <link href="css/base.css" rel="stylesheet" type="text/css">
+  <link href="css/style.css" rel="stylesheet" type="text/css">
+  <link href="css/navmenu.css" rel="stylesheet" type="text/css">
+  <link href="css/gallery.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div id="header">
@@ -26,20 +26,22 @@
 		</a>
 		<div class="main-nav__block">
 			<div class="nav__left">
-								<a href="/about" class="						">About</a>
-								<a href="/vision" class="						">Vision</a>
-								<a href="/projects" class="						">Projects</a>				
+								<a href="/o_nas" class="	">O nás</a>
+								<a href="/vize" class="">Vize</a>
+								<a href="/projekty" class="">Projekty</a>				
 			</div>
 			
             <div class="nav__right">
-									<a href="/topics">Topics</a>
-									<a href="/partners">Partners</a>
-									<a href="/contact">Contact</a>
+									<a href="/akce" class="">Akce</a>
+									<a href="/media" class="">Média</a>
+									<a href="/partaci" class="">Parťáci</a>
 							</div>
 		</div>
 	</nav>
 </div>
 </div>
+
+
 
 <div id="main" class="container">
 
@@ -65,20 +67,21 @@
 
   <h5>Moje cesta do krajiny: jak jsem se dostala do CooLAND?</h5>
 
-  <p>Jsem holka z malé vesnice, která dětství prožila mezi poli a v lese. Dnes jsem zabydlená na gauči v městském prostředí, neb vždy mne to táhlo ke knížkám a jako malá jsem si často hrála na učitelku. To mi zůstalo...stejně tak jako nadšení z venkovské krajiny. Společně s Katkou jsme učily na Fakultě životního prostředí předmět Pozemkové úpravy a zjistily jsme, že často studenti nemají velký zájem o venkovskou krajinu. Začaly jsme hledat důvod PROČ? Proč nejsou nadšení stejně jako my, když se začne mluvit o zemědělcích, čejkách, remízkách či alejích podél cest? Jedním z důvodu bylo, že “krajina” je pro ně abstraktní pojem nebo je unavovalo věčné fňukání nad stavem české krajiny. I my s Katkou jsme navštívily dost ubrečených seminářů a akcí, kde všichni přednášeli stylem: Všichni tady chcípnem, na všechno už je pozdě. Z toho důvodu jsme se rozhodly založit s dalšími spřízněnými dušemi spolek CooLAND. Existuje přeci tolik pozitivních příkladů, proto chceme ukazovat a šířit projekty, které se povedly a podporovat nové a nečekané nápady, protože nic není nemožné. A proč název CooLAND? Zajímat se a pečovat o krajinu je COOL, záleží jen na naší kreativitě a představivosti. LAND, protože půda je nejdůležitější společník pro naše spokojená břicha.</p>
+  <p>Jsem holka z malé vesnice, která dětství prožila mezi poli a v lese. Dnes jsem zabydlená na gauči v městském prostředí, neb vždy mne to táhlo ke knížkám a jako malá jsem si často hrála na učitelku. To mi zůstalo...stejně tak jako nadšení ze zemědělské krajiny. Společně s Katkou jsme učily na Fakultě životního prostředí předmět Pozemkové úpravy a zjistily jsme, že často studenti nemají velký zájem o zemědělskou krajinu. Začaly jsme hledat důvod PROČ? Proč nejsou nadšení stejně jako my, když se začne mluvit o zemědělcích, čejkách, remízkách či alejích podél cest? Jedním z důvodu bylo, že “krajina” je pro ně často abstraktní pojem, zemědělství je jen pro vidláky nebo je unavovalo věčné fňukání nad stavem české krajiny. I my s Katkou jsme navštívily dost ubrečených seminářů a akcí, kde všichni přednášeli stylem: Všichni tady chcípnem a na všechno už je příliš pozdě. Z toho důvodu jsme se rozhodly založit s dalšími spřízněnými dušemi CooLAND. Existuje přeci tolik pozitivních příkladů, proto chceme ukazovat a šířit projekty, které se povedly a podporovat nové a nečekané nápady, protože nic není nemožné. A proč název CooLAND? Zajímat se a pečovat o krajinu je CooL, záleží jen na naší kreativitě a představivosti. LAND, protože půda je nejdůležitější společník pro naše spokojená bříška.</p>
 
 <h5>V CooLAND mám na starosti:</h5>
 
-  <p>V CooLAND mám na starost šíření nových, často bláznivých myšlenek a nápadů formou různých přednášek, seminářů a setkání. Zároveň se soustředím na hledání nových kontaktů nejen v České republice, ale i v zahraničí. Baví mne propojení praxe s výzkumem, proto se zaměřuji i na zpracování vědeckých studií s přesahem do praxe. Aktuálně koordinuji Erasmus + projekt na téma Přístup k půdě pro začínající zemědělce (Access To Land) ve spolupráci s organizací <a href="http://asociaceampi.cz/" target="_blank">AMPI</a>.</p>
+  <p>V CooLAND mám na starost šíření nových, často bláznivých myšlenek a nápadů formou různých přednášek, příspěvků, seminářů a setkání. Zároveň se soustředím na hledání nových kontaktů nejen v České republice, ale i v zahraničí. Baví mne propojení praxe s výzkumem, proto se zaměřuji i na zpracování vědeckých studií s přesahem do praxe. Aktuálně koordinuji <a href="http://ec.europa.eu/programmes/erasmus-plus/projects/eplus-project-details-page/?nodeRef=workspace://SpacesStore/778039e5-ac61-4df3-8565-f0006bdf5077" target="_blank">Erasmus + projekt na téma Přístup k půdě</a> pro začínající zemědělce (Access To Land) ve spolupráci s organizací <a href="http://asociaceampi.cz/" target="_blank">AMPI</a>.
+</p>
 
   <h5>Mimo CooLAND dělám:</h5>
 
-  <p>Jsem odborná asistentka na Katedře biotechnických úprav krajiny na Fakultě životního prostředí České zemědělské univerzity v Praze, kdy vyučuji Pozemkové úpravy a Land Management. Ve svých vědeckých studiích se zabývám držbou půdy (land tenure security), přístupem k půdě (access to land), managemenem zemědělské krajiny (land management) a Společnou zemědělskou politikou (Common Agriculture Policy).</p>
+  <p>Jsem odborná asistentka na Katedře biotechnických úprav krajiny na Fakultě životního prostředí České zemědělské univerzity v Praze, kdy vyučuji Pozemkové úpravy a Land Management. Ve svých vědeckých studiích se zabývám držbou půdy (land tenure security), přístupem k půdě (access to land), managemenem zemědělské krajiny (agricultural land management) a Společnou zemědělskou politikou (Common Agriculture Policy).</p>
 <p><a href="https://www.researchgate.net/profile/Vratislava_Janovska?ev=hdr_xprf&_sg=3ltii6AtWiXxH0WpQM4pkSrJqy89SDm5yaM5xKBk4YDV6zn5pQguajDcRpxBerNu" target="_blank">Research Gate</a></p>
 
 <h5>Spolupracuji:</h5>
 
-  <p>Jsem součástí vědeckého týmu CSA Reserch Group spadající pod <a href="http://urgenci.net/csa-research-group-people/" target="_blank">URGENCI</a> a kontaktní osoba při spolupráci s evropskou sítí <a href="http://www.accesstoland.eu/" target="_blank">Access to Land</a>. Úzce spolupracuji s organizací <a href="http://asociaceampi.cz/lide-v-ampi " target="_blank">AMPI</a> a jsem spoluzakladatelkou <a href="https://potravinovasuverenita.cz/my/" target="_blank">Potravinové suverenity</a> v ČR.</p> 
+  <p>Jsem součástí vědeckého týmu CSA Reserch Group spadající pod <a href="http://urgenci.net/csa-research-group-people/" target="_blank">URGENCI</a> a kontaktní osoba při spolupráci s evropskou sítí <a href="http://www.accesstoland.eu/" target="_blank">Access to Land</a>. Úzce spolupracuji s organizací <a href="http://asociaceampi.cz/lide-v-ampi" target="_blank">AMPI</a> a jsem spoluzakladatelkou <a href="https://potravinovasuverenita.cz/my/" target="_blank">Potravinové suverenity</a> v ČR.</p> 
  
  </div>  
   </div>
@@ -86,5 +89,6 @@
   
 <div id="footer"></div>
 </html>
+
 
 
