--- a/katka.html
+++ b/katka.html
@@ -8,11 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="//fonts.googleapis.com/css?family=Merriweather:300,400,700&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 
-
   <link rel="icon" type="image/png" href="../img/favicon.png">
   <link href="css/base.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <link href="css/navmenu.css" rel="stylesheet" type="text/css">
+  <link href="css/gallery.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div id="header">
@@ -26,30 +26,49 @@
 		</a>
 		<div class="main-nav__block">
 			<div class="nav__left">
-								<a href="/about" class="						">About</a>
-								<a href="/vision" class="						">Vision</a>
-								<a href="/projects" class="						">Projects</a>				
+								<a href="/o_nas" class="	">O nás</a>
+								<a href="/vize" class="">Vize</a>
+								<a href="/projekty" class="">Projekty</a>				
 			</div>
 			
             <div class="nav__right">
-									<a href="/topics">Topics</a>
-									<a href="/partners">Partners</a>
-									<a href="/contact">Contact</a>
+									<a href="/akce" class="">Akce</a>
+									<a href="/media" class="">Média</a>
+									<a href="/partaci" class="">Parťáci</a>
 							</div>
 		</div>
 	</nav>
 </div>
 </div>
 
+
+
 <div id="main" class="container">
 
+<div class="people">
 
-  <h3>Kateřina Zímová</h3>
-  <h4><a href="mailto:info@cooland.cz">katerina@cooland.cz</a>, +420 605 505 529</h4>
-  
+<img src="img/Katka.jpg" width="370" height="" alt="Katka">
+<br>
+<br>
+<h3>Kateřina Zímová</h3>
+<br>
+
+<p> 
+<span class="left"><a href="mailto:katerina@cooland.cz"><img src="img/email.png" width="40" height="40" alt="Napište mi"/></a></span> 
+
+<span class="right"><a href="tel:+420605505529"><img src="img/phone.png" width="40" height="40" alt="zavolejte"/></a></span></p>
+
+<br>
+<br>
+
+<h4><span class="left"><a href="mailto:katerina@cooland.cz">Napište mi</a></span> 
+<span class="right"><a href="tel:+420605505529">Zavolejte</a></span></h4>
+
+
   <h5>Moje cesta do krajiny: jak jsem se dostala do CooLAND?</h5>
 
-  <p>Od malička jsem chtěla být ekolog a jsem ekolog :-) Je to jednoduché. Jsem tvrdohlavý beran, který si jde vždy za svým. Jelikož žiju v Čechách a většina naší krajiny je zemědělská, kde jinde chránit přírodu, než právě na polích a loukách? Nemám ráda, když někdo jen nadává a přitom nechce změnu. Přitom změnit podobu naší krajiny je tak jednoduché, stačí začít u sebe a pak jen spokojeně od skvělého oběda na terase pozorovat hejna ptáčků a radovat se z krásy okolo. Ráda bořím jakékoli mýty. Třeba o představě ušmudlaných ekologů, o tom, že žít ekologicky znamená žít v lese a taky třeba to, že člověk sám nemůže nic změnit. Nevěřte ničemu z toho. Fůzí všech těchto myšlenek s přidáním těch nejlepších lidí, jaké jsem si mohla přát vznikl CooLAND. Jsem hrdá, že mohu být jeho součástí.</p>
+  <p>Od malička jsem chtěla být ekolog a jsem ekolog :-) Je to jednoduché. Jsem tvrdohlavý beran, který si jde vždy za svým. Jelikož žiju v Čechách a většina naší krajiny je zemědělská, kde jinde chránit přírodu, než právě na polích a loukách? Nemám ráda, když někdo jen nadává a přitom nechce změnu. Přitom změnit podobu naší krajiny je tak jednoduché, stačí začít u sebe a pak jen spokojeně od skvělého oběda na terase pozorovat hejna ptáčků a radovat se z krásy okolo. Ráda bořím jakékoli mýty. Třeba o představě ušmudlaných ekologů, o tom, že žít ekologicky znamená žít v lese a taky třeba to, že člověk sám nemůže nic změnit. Nevěřte ničemu z toho. Fúzí všech těchto myšlenek s přidáním těch nejlepších lidí, jaké jsem si mohla přát vznikl CooLAND. Jsem hrdá, že mohu být jeho součástí. 
+</p>
 
 <h5>V CooLAND mám na starosti:</h5>
 
@@ -61,13 +80,14 @@
 
 <h5>Spolupracuji:</h5>
 
-  <p>Jsem členem <a href="http://www.cso.cz/ " target="_blank">České společnosti ornitologické</a> a <a href="http://www.cmkpu.cz/" target="_blank">Českomoravské komory pro pozemkové úpravy</a>. Spolupracuji se společností <a href="http://www.harvestfilms.cz/" target="_blank">Harvest films</a> na realizaci vzdělávacích seminářů s dokumentárními filmy.</p> 
-
-   
+  <p>Jsem členem <a href="http://www.cso.cz/" target="_blank">České společnosti ornitologické</a> a <a href="http://www.cmkpu.cz/" target="_blank">Českomoravské komory pro pozemkové úpravy</a>. Spolupracuji se společností <a href="http://www.harvestfilms.cz/" target="_blank">Harvest films</a> na realizaci vzdělávacích seminářů s dokumentárními filmy.</p> 
+ 
+ </div>  
   </div>
 </body>
   
 <div id="footer"></div>
 </html>
+
 
 
