--- a/o_nas.html
+++ b/o_nas.html
@@ -46,7 +46,7 @@
 <div>
 <div class="responsive">
 <div class="img">
-  <a target="_blank" href="/katka">
+  <a href="/katka">
     <img src="img/Katka.jpg" alt="Katka" width="" height="">
   </a>
   <div class="desc">
@@ -59,7 +59,7 @@
 
 <div class="responsive">
 <div class="img">
-  <a target="_blank" href="/vratka">
+  <a href="/vratka">
     <img src="img/Vratka.jpg" alt="Vraťka" width="" height="">
   </a>
   <div class="desc">
@@ -72,7 +72,7 @@
 
 <div class="responsive">
 <div class="img">
-  <a target="_blank" href="/sarka">
+  <a href="/sarka">
     <img src="img/Sarka.jpg" alt="Šárka" width="" height="">
   </a>
   <div class="desc">
@@ -91,7 +91,7 @@
 
 <div class="responsive">
 <div class="img">
-  <a target="_blank" href="/alena.jpg">
+  <a href="/alena.jpg">
     <img src="img/Alca.jpg" alt="Alča" width="" height="">
   </a>
   <div class="desc">
@@ -104,7 +104,7 @@
 
 <div class="responsive">
 <div class="img">
-  <a target="_blank" href="/radim.jpg">
+  <a href="/radim.jpg">
     <img src="img/Radim.jpg" alt="Radim" width="" height="">
   </a>
   <div class="desc">
