--- a/sarka.htm
+++ b/sarka.htm
@@ -8,11 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="//fonts.googleapis.com/css?family=Merriweather:300,400,700&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 
-
   <link rel="icon" type="image/png" href="../img/favicon.png">
   <link href="css/base.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <link href="css/navmenu.css" rel="stylesheet" type="text/css">
+  <link href="css/gallery.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div id="header">
@@ -26,26 +26,45 @@
 		</a>
 		<div class="main-nav__block">
 			<div class="nav__left">
-								<a href="/about" class="						">About</a>
-								<a href="/vision" class="						">Vision</a>
-								<a href="/projects" class="						">Projects</a>				
+								<a href="/o_nas" class="	">O nás</a>
+								<a href="/vize" class="">Vize</a>
+								<a href="/projekty" class="">Projekty</a>				
 			</div>
 			
             <div class="nav__right">
-									<a href="/topics">Topics</a>
-									<a href="/partners">Partners</a>
-									<a href="/contact">Contact</a>
+									<a href="/akce" class="">Akce</a>
+									<a href="/media" class="">Média</a>
+									<a href="/partaci" class="">Parťáci</a>
 							</div>
 		</div>
 	</nav>
 </div>
 </div>
 
+
+
 <div id="main" class="container">
 
-  <h3>Šárka Krčílková</h3>
-  <h4><a href="mailto:info@cooland.cz">sarka@cooland.cz</a>, +420 725 290 604</h4>
-  
+<div class="people">
+
+<img src="img/Sarka.jpg" width="370" height="" alt="Šárka">
+<br>
+<br>
+<h3>Šárka Krčílková</h3>
+<br>
+
+<p> 
+<span class="left"><a href="mailto:sarka@cooland.cz"><img src="img/email.png" width="40" height="40" alt="Napište mi"/></a></span> 
+
+<span class="right"><a href="tel:+420725290604"><img src="img/phone.png" width="40" height="40" alt="zavolejte"/></a></span></p>
+
+<br>
+<br>
+
+<h4><span class="left"><a href="mailto:sarka@cooland.cz">Napište mi</a></span> 
+<span class="right"><a href="tel:+420725290604">Zavolejte</a></span></h4>
+
+
   <h5>Moje cesta do krajiny: jak jsem se dostala do CooLAND?</h5>
 
   <p>Vždycky jsem toužila zabývat se něčím, co má smysl, nebude rutina, bude mě bavit, rozvíjet a pomůže někomu, nebo něčemu dalšímu. Prošla jsem řadou škol, vyzkoušela jsem spoustu aktivit a zaměstnání od hostesky, servírky v kavárně a za barem, ekologické aktivistky, účetní, úřednici veřejné správy, specialistky nákupu ve velké korporátní firmě, práci na zahradě, v lese i za počítačem. Až jsem nakonec zakotvila na Fakultě životního prostředí ČZU v Praze. To nejcennější co jsem tu našla, kromě znalostí o přírodě a krajině, jsou spřátelené duše s podobnou touhou jako mám já… zabývat se něčím, co má smysl, nebude rutina, bude nás bavit, rozvíjet a pomůže někomu, nebo něčemu dalšímu. A proto jsme společně založili CooLAND.</p>
@@ -61,13 +80,14 @@
 
 <h5>Spolupracuji:</h5>
 
-  <p>Léta jsem členem <a href="http://mjstudio.info/" target="_blank">MJ studia - tanečního studia Milany Ježkové</a>, kde už sice nepůsobím jako aktivní tanečnice, ale stále pomáhám vydávat <a href="http://mjstudio.info/casopis.html" target="_blank">Časopis MJ studia</a>.</p>
-  
-   
+  <p>Léta jsem členem <a href="http://mjstudio.info/" target="_blank">MJ studia - tanečního studia Milany Ježkové</a>, kde už sice nepůsobím jako aktivní tanečnice, ale stále pomáhám vydávat <a href="http://mjstudio.info/casopis.html" target="_blank">Časopis MJ studia</a>.</p> 
+ 
+ </div>  
   </div>
 </body>
   
 <div id="footer"></div>
 </html>
+
 
 
