--- a/alena.html
+++ b/alena.html
@@ -8,11 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="//fonts.googleapis.com/css?family=Merriweather:300,400,700&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 
-
   <link rel="icon" type="image/png" href="../img/favicon.png">
   <link href="css/base.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <link href="css/navmenu.css" rel="stylesheet" type="text/css">
+  <link href="css/gallery.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div id="header">
@@ -26,26 +26,45 @@
 		</a>
 		<div class="main-nav__block">
 			<div class="nav__left">
-								<a href="/about" class="						">About</a>
-								<a href="/vision" class="						">Vision</a>
-								<a href="/projects" class="						">Projects</a>				
+								<a href="/o_nas" class="	">O nás</a>
+								<a href="/vize" class="">Vize</a>
+								<a href="/projekty" class="">Projekty</a>				
 			</div>
 			
             <div class="nav__right">
-									<a href="/topics">Topics</a>
-									<a href="/partners">Partners</a>
-									<a href="/contact">Contact</a>
+									<a href="/akce" class="">Akce</a>
+									<a href="/media" class="">Média</a>
+									<a href="/partaci" class="">Parťáci</a>
 							</div>
 		</div>
 	</nav>
 </div>
 </div>
 
+
+
 <div id="main" class="container">
 
-   <h3>Alena Wranová</h3>
-  <h4><a href="mailto:info@cooland.cz">alena@cooland.cz</a>, +420 777 671 806</h4>
-  
+<div class="people">
+
+<img src="img/Alca.jpg" width="370" height="" alt="Alena">
+<br>
+<br>
+<h3>Alena Wranová</h3>
+<br>
+
+<p> 
+<span class="left"><a href="mailto:alena@cooland.cz"><img src="img/email.png" width="40" height="40" alt="Napište mi"/></a></span> 
+
+<span class="right"><a href="tel:+420777671806"><img src="img/phone.png" width="40" height="40" alt="zavolejte"/></a></span></p>
+
+<br>
+<br>
+
+<h4><span class="left"><a href="mailto:alena@cooland.cz">Napište mi</a></span> 
+<span class="right"><a href="tel:+420777671806">Zavolejte</a></span></h4>
+
+
   <h5>Moje cesta do krajiny: jak jsem se dostala do CooLAND?</h5>
 
   <p>Jakožto tvor městský, jsem hledala i jinou cestu do krajiny než z pozice projektanta v renomované firmě specializující se na dopravní infrastrukturu či hodnotitele krajinného rázu. Měla jsem to štěstí, že jsem na své cestě potkala skvělé lidi, které vzájemně nepojí pouze absolutorium na Fakultě životního prostředí, ale spojují je zodpovědné hodnoty a aktivní zájem o přístup k zemědělské krajině.</p>
@@ -61,13 +80,14 @@
 
 <h5>Spolupracuji:</h5>
 
-  <p>Jsem členem <a href="http://www.cski-cr.cz/" target="_blank">České společnosti krajinných inženýrů</a> a externím hodnotitelem <a href="http://www.msmt.cz/strukturalni-fondy-1/op-vvv" target="_blank">Operačního programu Výzkum, vývoj a vzdělávání</a> při MŠMT. V rámci mezinárodní sítě koordinované <a href="http://www.unep.org/" target="_blank">UNEP</a> spolupracuji na projektu věnovaném problematice <a href="http://themooc.net/" target="_blank">Disasters and Ecosystems: Resilience in a Changing Climate</a>.</p>
-    
-     
+  <p>Jsem členem <a href="http://www.cski-cr.cz/" target="_blank">České společnosti krajinných inženýrů</a> a externím hodnotitelem <a href="http://www.msmt.cz/strukturalni-fondy-1/op-vvv" target="_blank">Operačního programu Výzkum, vývoj a vzdělávání</a> při MŠMT. V rámci mezinárodní sítě koordinované <a href="http://www.unep.org/" target="_blank">UNEP</a> spolupracuji na projektu věnovaném problematice <a href="http://themooc.net/" target="_blank">Disasters and Ecosystems: Resilience in a Changing Climate</a>.</p> 
+ 
+ </div>  
   </div>
 </body>
   
 <div id="footer"></div>
 </html>
+
 
 
