--- a/o_nas.html
+++ b/o_nas.html
@@ -51,9 +51,9 @@
   </a>
   <div class="desc">
   <h4>Kateřina Zímová</h4>
-  <p><a href="katerina@cooland.cz">katerina@cooland.cz</a></p>
+  <p><a href="mailto:katerina@cooland.cz">katerina@cooland.cz</a></p>
   <p>+420 605 505 529</p>
-  <p><a target="_blank" href="/katka">Moje cesta do CooLAND zde</a></p></div>
+  <p><a href="/katka">Moje cesta do CooLAND zde</a></p></div>
 </div>
 </div>
 
@@ -64,9 +64,9 @@
   </a>
   <div class="desc">
  <h4>Vratislava Janovská</h4>
-  <p><a href="vratislava@cooland.cz">vratislava@cooland.cz</a></p>
+  <p><a href="mailto:vratislava@cooland.cz">vratislava@cooland.cz</a></p>
   <p>+420 608 264 902</p>
-  <p><a target="_blank" href="/vratka">Moje cesta do CooLAND zde</a></p></div>
+  <p><a href="/vratka">Moje cesta do CooLAND zde</a></p></div>
 </div>
 </div>
 
@@ -79,7 +79,7 @@
   <h4>Šárka Krčílková</h4>
   <p><a href="mailto:sarka@cooland.cz">sarka@cooland.cz</a></p>
   <p>+420 725 290 604</p>
-  <p><a target="_blank" href="/sarka">Moje cesta do CooLAND zde</a></p></div>
+  <p><a href="/sarka">Moje cesta do CooLAND zde</a></p></div>
   
 </div>
 </div>
@@ -91,27 +91,27 @@
 
 <div class="responsive">
 <div class="img">
-  <a href="/alena.jpg">
+  <a href="/alena">
     <img src="img/Alca.jpg" alt="Alča" width="" height="">
   </a>
   <div class="desc">
   <h4>Alena Wranová</h4>
   <p><a href="mailto:alena@cooland.cz">alena@cooland.cz</a></p>
   <p>+420 777 671 806</p>
-  <p><a target="_blank" href="/alena">Moje cesta do CooLAND zde</a></p></div>
+  <p><a href="/alena">Moje cesta do CooLAND zde</a></p></div>
 </div>
 </div>
 
 <div class="responsive">
 <div class="img">
-  <a href="/radim.jpg">
+  <a href="/radim">
     <img src="img/Radim.jpg" alt="Radim" width="" height="">
   </a>
   <div class="desc">
   <h4>Radim Seydl</h4>
   <p><a href="mailto:radim@cooland.cz">radim@cooland.cz</a></p>
   <p>+420 606 099 005</p>
-  <p><a target="_blank" href="/radim">Moje cesta do CooLAND zde</a></p></div>
+  <p><a href="/radim">Moje cesta do CooLAND zde</a></p></div>
   
 </div>
 </div>
