--- a/o_nas.html
+++ b/o_nas.html
@@ -116,6 +116,12 @@
 </div>
 </div>
 
+<div class="responsive">
+<div class="img">
+    <img src="img/Liska6.png" alt="Liška" width="" height="">
+</div>
+</div>
+
 </div>
 
 <div class="clearfix"></div>
