--- a/o_nas.html
+++ b/o_nas.html
@@ -85,10 +85,8 @@
 </div>
 
  </div>
- <div>
- <br>
- <br>
- <br>
+ <div class="responsive2">
+ <p>&nbsp;</p>
  </div>
  <div>
 
@@ -120,7 +118,7 @@
 </div>
 </div>
 
-<div class="responsive">
+<div class="responsive3">
 <div class="img">
     <img src="img/Liska6.png" alt="Liška" width="" height="">
 </div>
