--- a/o_nas.html
+++ b/o_nas.html
@@ -85,7 +85,7 @@
 </div>
 
  </div>
- <div class="responsive2">
+ <div class="responsive">
  <p>&nbsp;</p>
  </div>
  <div>
@@ -118,7 +118,7 @@
 </div>
 </div>
 
-<div class="responsive3">
+<div class="responsive">
 <div class="img">
     <img src="img/Liska6.png" alt="Liška" width="" height="">
 </div>
