--- a/o_nas.html
+++ b/o_nas.html
@@ -43,7 +43,7 @@
 
 <div id="main" class="container">
 
-<div>
+<div class="top_gallery">
 <div class="responsive">
 <div class="img">
   <a href="/katka">
@@ -85,9 +85,7 @@
 </div>
 
  </div>
- <div class="responsive3">
- <p>&nbsp;</p>
- </div>
+
  <div>
 
 
