--- a/o_nas.html
+++ b/o_nas.html
@@ -43,7 +43,6 @@
 
 <div id="main" class="container">
 
-<div class="top_gallery">
 <div class="responsive">
 <div class="img">
   <a href="/katka">
@@ -84,9 +83,9 @@
 </div>
 </div>
 
- </div>
+</div>
 
- <div>
+<div id="main" class="container">
 
 
 <div class="responsive">
@@ -125,8 +124,6 @@
 </div>
 
 <div class="clearfix"></div>
-
-</div>
 
 <br>
 <br>
