--- a/o_nas.html
+++ b/o_nas.html
@@ -42,7 +42,7 @@
 </div>
 
 <div id="main" class="container">
-
+<div class="top_gallery">
 <div class="responsive">
 <div class="img">
   <a href="/katka">
@@ -82,11 +82,7 @@
   
 </div>
 </div>
-
 </div>
-
-<div id="main" class="container">
-
 
 <div class="responsive">
 <div class="img">
