--- a/media.html
+++ b/media.html
@@ -59,19 +59,27 @@
 <br>
 <br>
 
-<div class="container">
-    <div class="row" style="padding-top: 10%">
-      <div class="one-half column block-header">
-        <p class="page-logo"><img src="img/CooLAND_all.jpg" alt="Cooland"></p>
-      </div>
-      <div class="one-half column block-contact">
-        <div class="one-half column block-header">
-        <p class="page-logo"><img src="img/CooLand_logo.png" alt="Cooland"></p>
-      </div>
-      </div>
-    </div>
-  </div>
+<div class="responsive2">
+<div class="img">
+    <img src="img/Liska3.png" alt="Liška" width="" height="">
+</div>
+</div>
 
+<div class="responsive">
+<div class="img">
+    <img src="img/CooLAND_all.jpg" alt="Cooland" width="" height="">
+</div>
+</div>
+
+<div class="responsive2">
+<div class="img">
+    <img src="img/CooLand_logo.png" alt="CooLand" width="" height="">
+</div>
+</div>
+
+</div>
+
+<div class="clearfix"></div>
 
 </div>
 </body>
