--- a/katka.html
+++ b/katka.html
@@ -52,20 +52,7 @@
 <br>
 <h3>Kateřina Zímová</h3>
 <br>
-
-<p> 
-<span class="left"><a href="mailto:katerina@cooland.cz"><img src="img/email.png" width="40" height="40" alt="Napište mi"/></a></span> 
-
-<span class="right"><a href="tel:+420605505529"><img src="img/phone.png" width="40" height="40" alt="zavolejte"/></a></span></p>
-
-<br>
-<br>
-
-<h4><span class="left"><a href="mailto:katerina@cooland.cz">Napište mi</a></span> 
-<span class="right"><a href="tel:+420605505529">Zavolejte</a></span></h4>
-
-
-  <h5>Moje cesta do krajiny: jak jsem se dostala do CooLAND?</h5>
+<h5>Moje cesta do krajiny: jak jsem se dostala do CooLAND?</h5>
 
   <p>Od malička jsem chtěla být ekolog a jsem ekolog :-) Je to jednoduché. Jsem tvrdohlavý beran, který si jde vždy za svým. Jelikož žiju v Čechách a většina naší krajiny je zemědělská, kde jinde chránit přírodu, než právě na polích a loukách? Nemám ráda, když někdo jen nadává a přitom nechce změnu. Přitom změnit podobu naší krajiny je tak jednoduché, stačí začít u sebe a pak jen spokojeně od skvělého oběda na terase pozorovat hejna ptáčků a radovat se z krásy okolo. Ráda bořím jakékoli mýty. Třeba o představě ušmudlaných ekologů, o tom, že žít ekologicky znamená žít v lese a taky třeba to, že člověk sám nemůže nic změnit. Nevěřte ničemu z toho. Fúzí všech těchto myšlenek s přidáním těch nejlepších lidí, jaké jsem si mohla přát vznikl CooLAND. Jsem hrdá, že mohu být jeho součástí. 
 </p>
@@ -82,7 +69,53 @@
 
   <p>Jsem členem <a href="http://www.cso.cz/" target="_blank">České společnosti ornitologické</a> a <a href="http://www.cmkpu.cz/" target="_blank">Českomoravské komory pro pozemkové úpravy</a>. Spolupracuji se společností <a href="http://www.harvestfilms.cz/" target="_blank">Harvest films</a> na realizaci vzdělávacích seminářů s dokumentárními filmy.</p> 
  
- </div>  
+ </div> 
+ 
+ 
+ <div class="responsive">
+<div class="img">
+  <p><a href="mailto:katerina@cooland.cz"><img src="img/email.png" width="40" height="40" alt="Napište mi"/></a></p>
+  <p><a href="mailto:katerina@cooland.cz">Napište mi</a>
+</div>
+</div>
+
+<div class="responsive2">
+<div class="img">
+    <img src="img/LiskaBonus.png" alt="Liška" width="" height="">
+</div>
+</div>
+
+<div class="responsive">
+<div class="img">
+  <p><a href="tel:+420605505529"><img src="img/phone.png" width="40" height="40" alt="zavolejte"/></a></p>
+  <p><a href="tel:+420605505529">Zavolejte</a></p></div>
+  
+</div>
+</div>
+
+</div>
+
+<div class="clearfix"></div>
+
+
+
+<p> 
+<span class="left"><a href="mailto:katerina@cooland.cz"><img src="img/email.png" width="40" height="40" alt="Napište mi"/></a></span> 
+
+<span class="right"><a href="tel:+420605505529"><img src="img/phone.png" width="40" height="40" alt="zavolejte"/></a></span></p>
+
+<br>
+<br>
+
+<h4><span class="left"><a href="mailto:katerina@cooland.cz">Napište mi</a></span> 
+<span class="right"><a href="tel:+420605505529">Zavolejte</a></span></h4>
+
+
+
+
+
+
+
   </div>
 </body>
   
