--- a/katka.html
+++ b/katka.html
@@ -74,8 +74,9 @@
  
  <div class="responsive">
 <div class="img">
+<div class="desc">
   <p><a href="mailto:katerina@cooland.cz"><img src="img/email.png" width="40" height="40" alt="Napište mi"/></a></p>
-  <p><a href="mailto:katerina@cooland.cz">Napište mi</a>
+  <p><a href="mailto:katerina@cooland.cz">Napište mi</a></div>
 </div>
 </div>
 
@@ -86,11 +87,10 @@
 </div>
 
 <div class="responsive">
-<div class="img">
+
   <p><a href="tel:+420605505529"><img src="img/phone.png" width="40" height="40" alt="zavolejte"/></a></p>
   <p><a href="tel:+420605505529">Zavolejte</a></p></div>
   
-</div>
 </div>
 
 </div>
