--- a/katka.html
+++ b/katka.html
@@ -73,11 +73,9 @@
  
  
  <div class="responsive">
-<div class="img">
-<div class="desc">
+
   <p><a href="mailto:katerina@cooland.cz"><img src="img/email.png" width="40" height="40" alt="Napište mi"/></a></p>
-  <p><a href="mailto:katerina@cooland.cz">Napište mi</a></div>
-</div>
+  <p><a href="mailto:katerina@cooland.cz">Napište mi</a>
 </div>
 
 <div class="responsive2">
@@ -88,7 +86,7 @@
 
 <div class="responsive">
 
-  <p><a href="tel:+420605505529"><img src="img/phone.png" width="40" height="40" alt="zavolejte"/></a></p>
+  <p><a href="tel:+420605505529"><img src="img/phone.png" width="" height="" alt="zavolejte"/></a></p>
   <p><a href="tel:+420605505529">Zavolejte</a></p></div>
   
 </div>
@@ -96,25 +94,6 @@
 </div>
 
 <div class="clearfix"></div>
-
-
-
-<p> 
-<span class="left"><a href="mailto:katerina@cooland.cz"><img src="img/email.png" width="40" height="40" alt="Napište mi"/></a></span> 
-
-<span class="right"><a href="tel:+420605505529"><img src="img/phone.png" width="40" height="40" alt="zavolejte"/></a></span></p>
-
-<br>
-<br>
-
-<h4><span class="left"><a href="mailto:katerina@cooland.cz">Napište mi</a></span> 
-<span class="right"><a href="tel:+420605505529">Zavolejte</a></span></h4>
-
-
-
-
-
-
 
   </div>
 </body>
