--- a/katka.html
+++ b/katka.html
@@ -86,7 +86,7 @@
 
 <div class="responsive">
 
-  <p><a href="tel:+420605505529"><img src="img/phone.png" width="" height="" alt="zavolejte"/></a></p>
+  <p><a href="tel:+420605505529"><img style="flow:right;" src="img/phone.png" width="40" height="40" alt="zavolejte"/></a></p>
   <p><a href="tel:+420605505529">Zavolejte</a></p></div>
   
 </div>
