--- a/katka.html
+++ b/katka.html
@@ -71,7 +71,9 @@
  
  </div> 
  
- 
+ <br>
+ <br>
+ <br>
  <div class="responsive">
 
   <p><a href="mailto:katerina@cooland.cz"><img src="img/email.png" width="40" height="40" alt="Napište mi"/></a></p>
@@ -84,9 +86,9 @@
 </div>
 </div>
 
-<div class="responsive">
+<div class="responsive" style="flow:right;">
 
-  <p><a href="tel:+420605505529"><img style="flow:right;" src="img/phone.png" width="40" height="40" alt="zavolejte"/></a></p>
+  <p><a href="tel:+420605505529"><img  src="img/phone.png" width="40" height="40" alt="zavolejte"/></a></p>
   <p><a href="tel:+420605505529">Zavolejte</a></p></div>
   
 </div>
