--- a/katka.html
+++ b/katka.html
@@ -80,7 +80,7 @@
   <p><a href="mailto:katerina@cooland.cz">Napište mi</a>
 </div>
 
-<div class="responsive2">
+<div class="responsive3">
 <div class="img">
     <img src="img/LiskaBonus.png" alt="Liška" width="" height="">
 </div>
@@ -88,8 +88,8 @@
 
 <div class="responsive" style="float:right;">
 
-  <p><a href="tel:+420605505529"><img  src="img/phone.png" width="40" height="40" alt="zavolejte"/></a></p>
-  <p><a href="tel:+420605505529">Zavolejte</a></p></div>
+  <p><a style="float:right;" href="tel:+420605505529"><img  src="img/phone.png" width="40" height="40" alt="zavolejte"/></a></p>
+  <p><a style="float:right;" href="tel:+420605505529">Zavolejte</a></p></div>
   
 </div>
 
