--- a/o_nas.html
+++ b/o_nas.html
@@ -51,7 +51,7 @@
   <h4>Kateřina Zímová</h4>
   <p><a href="mailto:katerina@cooland.cz">katerina@cooland.cz</a></p>
   <p>+420 605 505 529</p>
-  <p><a href="/katka">Moje cesta do CooLAND zde</a></p></div>
+  <p><a href="/katka">Moje cesta do CooLAND</a></p></div>
 </div>
 </div>
 
@@ -64,7 +64,7 @@
  <h4>Vratislava Janovská</h4>
   <p><a href="mailto:vratislava@cooland.cz">vratislava@cooland.cz</a></p>
   <p>+420 608 264 902</p>
-  <p><a href="/vratka">Moje cesta do CooLAND zde</a></p></div>
+  <p><a href="/vratka">Moje cesta do CooLAND</a></p></div>
 </div>
 </div>
 
@@ -77,7 +77,7 @@
   <h4>Šárka Krčílková</h4>
   <p><a href="mailto:sarka@cooland.cz">sarka@cooland.cz</a></p>
   <p>+420 725 290 604</p>
-  <p><a href="/sarka">Moje cesta do CooLAND zde</a></p></div>
+  <p><a href="/sarka">Moje cesta do CooLAND</a></p></div>
   
 </div>
 </div>
@@ -91,7 +91,7 @@
   <h4>Alena Wranová</h4>
   <p><a href="mailto:alena@cooland.cz">alena@cooland.cz</a></p>
   <p>+420 777 671 806</p>
-  <p><a href="/alena">Moje cesta do CooLAND zde</a></p></div>
+  <p><a href="/alena">Moje cesta do CooLAND</a></p></div>
 </div>
 </div>
 
@@ -104,14 +104,14 @@
   <h4>Radim Seydl</h4>
   <p><a href="mailto:radim@cooland.cz">radim@cooland.cz</a></p>
   <p>+420 606 099 005</p>
-  <p><a href="/radim">Moje cesta do CooLAND zde</a></p></div>
+  <p><a href="/radim">Moje cesta do CooLAND</a></p></div>
   
 </div>
 </div>
 
 <div class="responsive2">
 <div class="img">
-    <img src="img/Liska6.png" alt="Liška" width="" height="">
+    <img src="img/Liska6.png" alt="Liška" width="150" height="">
 </div>
 </div>
 
