--- a/katka.html
+++ b/katka.html
@@ -75,9 +75,9 @@
  <br>
  <br>
  <div class="responsive">
-
-  <p><a href="mailto:katerina@cooland.cz"><img src="img/email.png" width="40" height="40" alt="Napište mi"/></a></p>
-  <p><a href="mailto:katerina@cooland.cz">Napište mi</a>
+  <p><a href="mailto:katerina@cooland.cz"><img src="img/email.png" width="" height="" alt="Napište mi"/></a></p>
+  <div class="desc">
+  <p><a href="mailto:katerina@cooland.cz">Napište mi</a></div>
 </div>
 
 <div class="responsive3">
@@ -87,9 +87,9 @@
 </div>
 
 <div class="responsive" style="float:right;">
-
-  <p><a style="float:right;" href="tel:+420605505529"><img  src="img/phone.png" width="40" height="40" alt="zavolejte"/></a></p>
-  <p><a style="float:right;" href="tel:+420605505529">Zavolejte</a></p></div>
+  <p><a href="tel:+420605505529"><img  src="img/phone2.png" width="" height="" alt="zavolejte"/></a></p>
+  <div class="desc">
+  <p><a href="tel:+420605505529">Zavolejte</a></p></div>
   
 </div>
 
