--- a/katka.html
+++ b/katka.html
@@ -86,8 +86,8 @@
 </div>
 </div>
 
-<div class="responsive" style="float:right;">
-  <p><a href="tel:+420605505529"><img  src="img/phone2.png" width="" height="" alt="zavolejte"/></a></p>
+<div class="responsive">
+  <p><a href="tel:+420605505529"><img  src="img/phone.png" width="" height="" alt="zavolejte"/></a></p>
   <div class="desc">
   <p><a href="tel:+420605505529">Zavolejte</a></p></div>
   
