--- a/katka.html
+++ b/katka.html
@@ -51,6 +51,8 @@
 <br>
 <br>
 <h3>Kateřina Zímová</h3>
+<p><a href="mailto:katerina@cooland.cz">katerina@cooland.cz</a></p>
+  <p>+420 605 505 529</p>
 <br>
 <h5>Moje cesta do krajiny: jak jsem se dostala do CooLAND?</h5>
 
