--- a/o_nas.html
+++ b/o_nas.html
@@ -45,7 +45,7 @@
 <div class="responsive">
 <div class="img">
   <a href="/katka">
-    <img src="img/Katka.jpg" alt="Katka" width="" height="">
+    <img src="img/Katka_small.jpg" alt="Katka" width="" height="">
   </a>
   <div class="desc">
   <h4>Kateřina Zímová</h4>
@@ -58,7 +58,7 @@
 <div class="responsive">
 <div class="img">
   <a href="/vratka">
-    <img src="img/Vratka.jpg" alt="Vraťka" width="" height="">
+    <img src="img/Vratka_small.jpg" alt="Vraťka" width="" height="">
   </a>
   <div class="desc">
  <h4>Vratislava Janovská</h4>
@@ -71,7 +71,7 @@
 <div class="responsive">
 <div class="img">
   <a href="/sarka">
-    <img src="img/Sarka.jpg" alt="Šárka" width="" height="">
+    <img src="img/Sarka_small.jpg" alt="Šárka" width="" height="">
   </a>
   <div class="desc">
   <h4>Šárka Krčílková</h4>
@@ -85,7 +85,7 @@
 <div class="responsive">
 <div class="img">
   <a href="/alena">
-    <img src="img/Alca.jpg" alt="Alča" width="" height="">
+    <img src="img/Alca_small.jpg" alt="Alča" width="" height="">
   </a>
   <div class="desc">
   <h4>Alena Wranová</h4>
@@ -98,7 +98,7 @@
 <div class="responsive">
 <div class="img">
   <a href="/radim">
-    <img src="img/Radim.jpg" alt="Radim" width="" height="">
+    <img src="img/Radim_small.jpg" alt="Radim" width="" height="">
   </a>
   <div class="desc">
   <h4>Radim Seydl</h4>
