--- a/katka.html
+++ b/katka.html
@@ -47,13 +47,16 @@
 
 <div class="people">
 
-<img src="img/Katka.jpg" width="370" height="" alt="Katka">
-<br>
-<br>
-<h3>Kateřina Zímová</h3>
-<div class="desc">
-<p><a href="mailto:katerina@cooland.cz">katerina@cooland.cz</a></p>
+<div class="responsive">
+<div class="img">
+  <a href="/katka">
+    <img src="img/Katka_small.jpg" alt="Katka" width="" height="">
+  </a>
+  <div class="desc">
+  <h3>Kateřina Zímová</h3>
+  <p><a href="mailto:katerina@cooland.cz">katerina@cooland.cz</a></p>
   <p>+420 605 505 529</p>
+  </div>
 </div>
 <br>
 <h5>Moje cesta do krajiny: jak jsem se dostala do CooLAND?</h5>
