--- a/katka.html
+++ b/katka.html
@@ -47,16 +47,15 @@
 
 <div class="people">
 
-<div class="responsive">
+<div class="responsive5">
 <div class="img">
   <a href="/katka">
     <img src="img/Katka_small.jpg" alt="Katka" width="" height="">
-  </a>
+  </a> </div>
   <div class="desc">
   <h3>Kateřina Zímová</h3>
   <p><a href="mailto:katerina@cooland.cz">katerina@cooland.cz</a></p>
   <p>+420 605 505 529</p>
-  </div>
 </div>
 </div>
 <br>
@@ -82,7 +81,7 @@
  <br>
  <br>
  <br>
- <div class="responsive">
+ <div class="responsive4">
   <p><a href="mailto:katerina@cooland.cz"><img src="img/email.png" width="" height="" alt="Napište mi"/></a></p>
   <div class="desc">
   <p><a href="mailto:katerina@cooland.cz">Napište mi</a></div>
@@ -94,7 +93,7 @@
 </div>
 </div>
 
-<div class="responsive">
+<div class="responsive4">
   <p><a href="tel:+420605505529"><img  src="img/phone.png" width="" height="" alt="zavolejte"/></a></p>
   <div class="desc">
   <p><a href="tel:+420605505529">Zavolejte</a></p></div>
