--- a/katka.html
+++ b/katka.html
@@ -51,11 +51,11 @@
 <div class="img">
   <a href="/katka">
     <img src="img/Katka_small.jpg" alt="Katka" width="" height="">
-  </a> </div>
+  </a>
   <div class="desc">
   <h3>Kateřina Zímová</h3>
   <p><a href="mailto:katerina@cooland.cz">katerina@cooland.cz</a></p>
-  <p>+420 605 505 529</p>
+  <p>+420 605 505 529</p></div>
 </div>
 </div>
 <br>
