--- a/katka.html
+++ b/katka.html
@@ -52,10 +52,14 @@
   <a href="/katka">
     <img src="img/Katka_small.jpg" alt="Katka" width="" height="">
   </a>
+</div>
+</div>
+
+<div class="responsive5">
   <div class="desc">
   <h3>Kateřina Zímová</h3>
   <p><a href="mailto:katerina@cooland.cz">katerina@cooland.cz</a></p>
-  <p>+420 605 505 529</p></div>
+  <p>+420 605 505 529</p>
 </div>
 </div>
 <br>
