--- a/katka.html
+++ b/katka.html
@@ -58,8 +58,8 @@
 <div class="responsive5">
   <div class="desc">
   <h3>Kateřina Zímová</h3>
-  <p><a href="mailto:katerina@cooland.cz">katerina@cooland.cz</a></p>
-  <p>+420 605 505 529</p>
+  <h5<a href="mailto:katerina@cooland.cz">katerina@cooland.cz</a></h5>
+  <h5>+420 605 505 529</h5>
 </div>
 </div>
 <br>
