--- a/katka.html
+++ b/katka.html
@@ -58,7 +58,7 @@
 <div class="responsive5">
   <div class="desc">
   <h3>Kateřina Zímová</h3>
-  <h5<a href="mailto:katerina@cooland.cz">katerina@cooland.cz</a></h5>
+  <h5><span><a href="mailto:katerina@cooland.cz">katerina@cooland.cz</a></span></h5>
   <h5>+420 605 505 529</h5>
 </div>
 </div>
