--- a/katka.html
+++ b/katka.html
@@ -88,7 +88,7 @@
  <div class="responsive4">
   <p><a href="mailto:katerina@cooland.cz"><img src="img/email.png" width="" height="" alt="Napište mi"/></a></p>
   <div class="desc">
-  <p><a href="mailto:katerina@cooland.cz">Napište mi</a></div>
+  <p><a href="mailto:katerina@cooland.cz">Napište mi</a></p></div>
 </div>
 
 <div class="responsive3">
