--- a/alena.html
+++ b/alena.html
@@ -46,26 +46,25 @@
 <div id="main" class="container">
 
 <div class="people">
+	
+	
+<div class="responsive5">
+<div class="img">
+  <a href="/katka">
+    <img src="img/Alca_small.jpg" alt="Alena" width="" height="">
+  </a>
+</div>
+</div>
 
-<img src="img/Alca.jpg" width="370" height="" alt="Alena">
+<div class="responsive5">
+  <div class="desc">
+ <h3>Alena Wranová</h3>
+  <h5><span><a href="mailto:alena@cooland.cz">alena@cooland.cz</a></span></h5>
+  <h5>+420 777 671 806</h5>
+</div>
+</div>
 <br>
-<br>
-<h3>Alena Wranová</h3>
-<br>
-
-<p> 
-<span class="left"><a href="mailto:alena@cooland.cz"><img src="img/email.png" width="40" height="40" alt="Napište mi"/></a></span> 
-
-<span class="right"><a href="tel:+420777671806"><img src="img/phone.png" width="40" height="40" alt="zavolejte"/></a></span></p>
-
-<br>
-<br>
-
-<h4><span class="left"><a href="mailto:alena@cooland.cz">Napište mi</a></span> 
-<span class="right"><a href="tel:+420777671806">Zavolejte</a></span></h4>
-
-
-  <h5>Moje cesta do krajiny: jak jsem se dostala do CooLAND?</h5>
+<h5>Moje cesta do krajiny: jak jsem se dostala do CooLAND?</h5>
 
   <p>Jakožto tvor městský, jsem hledala i jinou cestu do krajiny než z pozice projektanta v renomované firmě specializující se na dopravní infrastrukturu či hodnotitele krajinného rázu. Měla jsem to štěstí, že jsem na své cestě potkala skvělé lidi, které vzájemně nepojí pouze absolutorium na Fakultě životního prostředí, ale spojují je zodpovědné hodnoty a aktivní zájem o přístup k zemědělské krajině.</p>
 
@@ -83,6 +82,34 @@
   <p>Jsem členem <a href="http://www.cski-cr.cz/" target="_blank">České společnosti krajinných inženýrů</a> a externím hodnotitelem <a href="http://www.msmt.cz/strukturalni-fondy-1/op-vvv" target="_blank">Operačního programu Výzkum, vývoj a vzdělávání</a> při MŠMT. V rámci mezinárodní sítě koordinované <a href="http://www.unep.org/" target="_blank">UNEP</a> spolupracuji na projektu věnovaném problematice <a href="http://themooc.net/" target="_blank">Disasters and Ecosystems: Resilience in a Changing Climate</a>.</p> 
  
  </div>  
+  <br>
+ <br>
+ <br>
+ <div class="responsive4">
+  <p><a href="mailto:alena@cooland.cz"><img src="img/email.png" width="" height="" alt="Napište mi"/></a></p>
+  <div class="desc">
+  <p><a href="mailto:alena@cooland.cz">Napište mi</a></p></div>
+</div>
+
+<div class="responsive3">
+<div class="img">
+    <img src="img/LiskaBonus.png" alt="Liška" width="" height="">
+</div>
+</div>
+
+<div class="responsive4">
+  <p><a href="tel:+420777671806"><img  src="img/phone.png" width="" height="" alt="zavolejte"/></a></p>
+  <div class="desc">
+  <p><a href="tel:+420777671806">Zavolejte</a></p></div>
+  
+</div>
+
+</div>
+
+<div class="clearfix"></div>
+ 
+ 
+ 
   </div>
 </body>
   
