--- a/sarka.html
+++ b/sarka.html
@@ -47,24 +47,20 @@
 
 <div class="people">
 
-<img src="img/Sarka.jpg" width="370" height="" alt="Šárka">
+<div class="responsive5">
+<div class="img">
+    <img src="img/Sarka_small.jpg" alt="Šárka" width="" height="">
+</div>
+</div>
+
+<div class="responsive5">
+  <div class="desc">
+  <h3>Šárka Krčílková</h3>
+  <h5><span><a href="mailto:sarka@cooland.cz">sarka@cooland.cz</a></span></h5>
+  <h5>+420 725 290 604</h5>
+</div>
+</div>
 <br>
-<br>
-<h3>Šárka Krčílková</h3>
-<br>
-
-<p> 
-<span class="left"><a href="mailto:sarka@cooland.cz"><img src="img/email.png" width="40" height="40" alt="Napište mi"/></a></span> 
-
-<span class="right"><a href="tel:+420725290604"><img src="img/phone.png" width="40" height="40" alt="zavolejte"/></a></span></p>
-
-<br>
-<br>
-
-<h4><span class="left"><a href="mailto:sarka@cooland.cz">Napište mi</a></span> 
-<span class="right"><a href="tel:+420725290604">Zavolejte</a></span></h4>
-
-
   <h5>Moje cesta do krajiny: jak jsem se dostala do CooLAND?</h5>
 
   <p>Vždycky jsem toužila zabývat se něčím, co má smysl, nebude rutina, bude mě bavit, rozvíjet a pomůže někomu, nebo něčemu dalšímu. Prošla jsem řadou škol, vyzkoušela jsem spoustu aktivit a zaměstnání od hostesky, servírky v kavárně a za barem, ekologické aktivistky, účetní, úřednici veřejné správy, specialistky nákupu ve velké korporátní firmě, práci na zahradě, v lese i za počítačem. Až jsem nakonec zakotvila na Fakultě životního prostředí ČZU v Praze. To nejcennější co jsem tu našla, kromě znalostí o přírodě a krajině, jsou spřátelené duše s podobnou touhou jako mám já… zabývat se něčím, co má smysl, nebude rutina, bude nás bavit, rozvíjet a pomůže někomu, nebo něčemu dalšímu. A proto jsme společně založili CooLAND.</p>
@@ -83,6 +79,30 @@
   <p>Léta jsem členem <a href="http://mjstudio.info/" target="_blank">MJ studia - tanečního studia Milany Ježkové</a>, kde už sice nepůsobím jako aktivní tanečnice, ale stále pomáhám vydávat <a href="http://mjstudio.info/casopis.html" target="_blank">Časopis MJ studia</a>.</p> 
  
  </div>  
+  <br>
+ <br>
+ <br>
+ <div class="responsive4">
+  <p><a href="mailto:sarka@cooland.cz"><img src="img/email.png" width="" height="" alt="Napište mi"/></a></p>
+  <div class="desc">
+  <p><a href="mailto:sarka@cooland.cz">Napište mi</a></p></div>
+</div>
+
+<div class="responsive3">
+<div class="img">
+    <img src="img/LiskaBonus.png" alt="Liška" width="" height="">
+</div>
+</div>
+
+<div class="responsive4">
+  <p><a href="tel:+420725290604"><img  src="img/phone.png" width="" height="" alt="zavolejte"/></a></p>
+  <div class="desc">
+  <p><a href="tel:+420725290604">Zavolejte</a></p></div>
+  
+</div>
+</div>
+
+<div class="clearfix"></div>
   </div>
 </body>
   
