--- a/vratka.html
+++ b/vratka.html
@@ -47,24 +47,20 @@
 
 <div class="people">
 
-<img src="img/Vratka.jpg" width="370" height="" alt="Vraťka">
+<div class="responsive5">
+<div class="img">
+    <img src="img/Vratka_small.jpg" alt="Vraťka" width="" height="">
+</div>
+</div>
+
+<div class="responsive5">
+  <div class="desc">
+  <h3>Vratislava Janovská</h3>
+  <h5><span><a href="mailto:vratislava@cooland.cz">vratislava@cooland.cz</a></span></h5>
+  <h5>+420 608 264 902</h5>
+</div>
+</div>
 <br>
-<br>
-<h3>Vratislava Janovská</h3>
-<br>
-
-<p> 
-<span class="left"><a href="mailto:vratislava@cooland.cz"><img src="img/email.png" width="40" height="40" alt="Napište mi"/></a></span> 
-
-<span class="right"><a href="tel:+420608264902"><img src="img/phone.png" width="40" height="40" alt="zavolejte"/></a></span></p>
-
-<br>
-<br>
-
-<h4><span class="left"><a href="mailto:vratislava@cooland.cz">Napište mi</a></span> 
-<span class="right"><a href="tel:+420608264902">Zavolejte</a></span></h4>
-
-
   <h5>Moje cesta do krajiny: jak jsem se dostala do CooLAND?</h5>
 
   <p>Jsem holka z malé vesnice, která dětství prožila mezi poli a v lese. Dnes jsem zabydlená na gauči v městském prostředí, neb vždy mne to táhlo ke knížkám a jako malá jsem si často hrála na učitelku. To mi zůstalo...stejně tak jako nadšení ze zemědělské krajiny. Společně s Katkou jsme učily na Fakultě životního prostředí předmět Pozemkové úpravy a zjistily jsme, že často studenti nemají velký zájem o zemědělskou krajinu. Začaly jsme hledat důvod PROČ? Proč nejsou nadšení stejně jako my, když se začne mluvit o zemědělcích, čejkách, remízkách či alejích podél cest? Jedním z důvodu bylo, že “krajina” je pro ně často abstraktní pojem, zemědělství je jen pro vidláky nebo je unavovalo věčné fňukání nad stavem české krajiny. I my s Katkou jsme navštívily dost ubrečených seminářů a akcí, kde všichni přednášeli stylem: Všichni tady chcípnem a na všechno už je příliš pozdě. Z toho důvodu jsme se rozhodly založit s dalšími spřízněnými dušemi CooLAND. Existuje přeci tolik pozitivních příkladů, proto chceme ukazovat a šířit projekty, které se povedly a podporovat nové a nečekané nápady, protože nic není nemožné. A proč název CooLAND? Zajímat se a pečovat o krajinu je CooL, záleží jen na naší kreativitě a představivosti. LAND, protože půda je nejdůležitější společník pro naše spokojená bříška.</p>
@@ -84,6 +80,30 @@
   <p>Jsem součástí vědeckého týmu CSA Reserch Group spadající pod <a href="http://urgenci.net/csa-research-group-people/" target="_blank">URGENCI</a> a kontaktní osoba při spolupráci s evropskou sítí <a href="http://www.accesstoland.eu/" target="_blank">Access to Land</a>. Úzce spolupracuji s organizací <a href="http://asociaceampi.cz/lide-v-ampi" target="_blank">AMPI</a> a jsem spoluzakladatelkou <a href="https://potravinovasuverenita.cz/my/" target="_blank">Potravinové suverenity</a> v ČR.</p> 
  
  </div>  
+  <br>
+ <br>
+ <br>
+ <div class="responsive4">
+  <p><a href="mailto:vratislava@cooland.cz"><img src="img/email.png" width="" height="" alt="Napište mi"/></a></p>
+  <div class="desc">
+  <p><a href="mailto:vratislava@cooland.cz">Napište mi</a></p></div>
+</div>
+
+<div class="responsive3">
+<div class="img">
+    <img src="img/LiskaBonus.png" alt="Liška" width="" height="">
+</div>
+</div>
+
+<div class="responsive4">
+  <p><a href="tel:+420608264902"><img  src="img/phone.png" width="" height="" alt="zavolejte"/></a></p>
+  <div class="desc">
+  <p><a href="tel:+420608264902">Zavolejte</a></p></div>
+</div>
+
+</div>
+
+<div class="clearfix"></div>
   </div>
 </body>
   
