--- a/akce.html
+++ b/akce.html
@@ -42,19 +42,41 @@
 </div>
 
 <div id="main" class="container">
+	
+<h4>17. září 2016/ Dětřichovice, Poznej svého farmáře u nás na Lukavě</h4>
+
+<p>Chystáme se podpořit farmu Lukava při jejím velkém dni otevřených dveří pořádaných v rámci kampaně Ministerstva zemědělství “Poznej svého farmáře”. </p>
+<p><a href="http://www.lukava.net/poznej-sveho-farmare-u-nas-na-lukave/" target="_blank">http://www.lukava.net/poznej-sveho-farmare-u-nas-na-lukave/</a></p>
+
+<h4>16. - 18. září 2016/ Ostrava, Third European CSA Meeting</h4>
+<p>Evropské setkání KPZ, kde CooLAND samozřejmě nemůže chybět i jako jeden z leaderů vědecko-výzkumné sekce.</p>
+<p><a href="http://ostrava.urgenci.net/" target="_blank">http://ostrava.urgenci.net/</a></p>
+
+<h4>8. září 2016 / Praha, Vernisáž a křest publikace “Láska ke krajině prochází žaludkem”</h4>
+
+<p>Výstava fotografií Kevina V. Tona o první sezóně komunitou podporovaného zemědělství KPZ CooLAND byla pro tento večer i skvělým setkáním s vámi všemi při křtu naší první publikace “Příběh komunitou podporovaného zemědělství”, která vznikla ve spolupráci s organizací PRO-BIO Liga.</p>
+<p>Výstavu hostí celé září galerie Langhans - Centrum Člověka v tísni.</p>
+<p><a href="https://www.clovekvtisni.cz/cs/kalendar/vernisaz-vystavy-a-krest-publikace-laska-ke-krajine-prochazi-zaludkem?src=268" target="_blank">https://www.clovekvtisni.cz/cs/kalendar/vernisaz-vystavy-a-krest-publikace-laska-ke-krajine-prochazi-zaludkem?src=268</a></p>
+
 <h4>7. června 2016 / Poděbrady, BIO v regionu Středočeského kraje</h4>
 
 <p>CooLAND přednáší o komunitou podporovaném zemědělství jakožto jedné z cest k potravinám z blízka na prvním z cyklu seminářů <a href="http://bioinstitut.cz/cz/bio-v-regionu-stredoceskeho-kraje" target="_blank">„BIO V REGIONU“</a>. Projekt chce upozornit na to, že nákupem regionálních biopotravin každý z nás podporuje jak místní ekonomiku, tak krajinu.</p>
 
-<h4>16. května 2016 / Praha, Restaurant Day</h4>
+<h4>21. května 2016 / Praha, Restaurant Day</h4>
 
 <p>V našem sídle na Praze 6 hostíme kolemjdoucí lokálními potravinami a vysvětlujeme, jak pozitivně ovlivňujeme zemědělskou krajinu tím, že si tak hezky pochutnáváme na dobrém pití a jídle z místních zdrojů. </p>
 
-<h4>9. května 2016 / Zábřeh, Jídlo na ulici</h4>
+<h4>17. května 2016 / Praha, BUZZ Talks: Kompostování a pěstování ve městě</h4>
+
+<p>A opět pozváni na BUZZ Talks, tentokráte v Altě při debatě nejen o spotřebitelských KPZ a dobrém jídle, které si lze vypěstovat i v hlavním městě.</p>
+
+<p><a href="http://www.motivp.com/shop/video/2-cast-Moderovana-diskuze-s-recniky-na-tema-Kompostovani-a-pestovani-ve-meste" target="_blank">http://www.motivp.com/shop/video/2-cast-Moderovana-diskuze-s-recniky-na-tema-Kompostovani-a-pestovani-ve-meste</a></p>
+
+<h4>14. května 2016 / Zábřeh, Jídlo na ulici</h4>
 
 <p>V Moravském Zábřehu se účastníme street food festivalu, kde propagujeme myšlenky komunitou podporovaného zemědělství a vaříme kávu BirdSong Coffe</p>
 
-<h4>9. května 2016 / Praha, Férová Letná</h4>
+<h4>14. května 2016 / Praha, Férová Letná</h4>
 
 <p>Na pikniku na Letné představujeme myšlenky ekologického hospodaření v krajině a nabízíme oddech při listování naší krajinářskou knihovničkou.</p>
 
@@ -62,7 +84,13 @@
 
 <p>Vypravili jsme se do Olomouce na Ekojarmark, na němž jsme propagovali myšlenky KPZ.</p> 
 
-<h4>14. března 2016 / Jeden svět</h4>
+<h4>27. dubna 2016 / Praha, NGO Market</h4>
+
+<p>Nenechali jsme si ujít aktivní účast na tradičním veletrhu neziskovek NGO Market podpořeného Nadací Forum 2000.</p>
+
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/C_Ho2soOHPg" frameborder="0" allowfullscreen></iframe></p>
+
+<h4>13. března 2016 / Jeden svět</h4>
 
 <p>Zúčastnili jsem se diskuse o mizející půdě na <a href="http://www.ceskatelevize.cz/porady/10000000244-jeden-svet-2016/216254000800006-mizejici-puda/" target="_blank">festivalu Jeden svět</a></p>
 
