--- a/projekty.html
+++ b/projekty.html
@@ -52,7 +52,7 @@
 
 <h3>Program na zlepšení kondice zemědělské krajiny</h3>
 
-<p>Zdravá a funkční zemědělská krajina je základem zdraví náš všech. Pro zlepšení její kondice krajinní ekologů doporučují, aby se do jejího fitness programu zase přidaly krajinotvorné prvky. Pojďte společně s CooLAND podpořit pomocné služby těchto krajinotvorných parťáků zemědělské půdy, jakými jsou například aleje, solitérní stromy, remízky, tůně a další prvky, které pomohou nejen vykouzlit na její tváři nové, veselé barvy, ale zajistí, že opět bude schopna podávat nejlepší výkony. Krajina má ráda obecenstvo, proto neváhejte fandit s námi. Cesta do krajiny vede kolem vás.</p>
+<p>Zdravá a funkční zemědělská krajina je základem zdraví náš všech. Pro zlepšení její kondice krajinní ekologové doporučují, aby se do jejího fitness programu zase přidaly krajinotvorné prvky. Pojďte společně s CooLAND podpořit pomocné služby těchto krajinotvorných parťáků zemědělské půdy, jakými jsou například aleje, solitérní stromy, remízky, tůně a další prvky, které pomohou nejen vykouzlit na její tváři nové, veselé barvy, ale zajistí, že opět bude schopna podávat nejlepší výkony. Krajina má ráda obecenstvo, proto neváhejte fandit s námi. Cesta do krajiny vede kolem vás.</p>
 
 <h4>Jak na to?</h4>
 <ul>
