--- a/projekty.html
+++ b/projekty.html
@@ -42,7 +42,7 @@
 </div>
 
 
-<div id="main" class="container people">
+<div id="main" class="container text_justify">
   
 <p>Nelíbí se Vám velké lány orné půdy bez známky života? Jste smutní z toho, že už nemůžete házet flintu do žita, ale pouze do kukuřice či řepky?</p>
 
